@@ -2,6 +2,8 @@ package seedu.address.logic.parser;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static seedu.address.logic.commands.CommandTestUtil.VALID_PUBLIC_ADDRESS_BTC_MAIN;
+import static seedu.address.logic.commands.CommandTestUtil.VALID_PUBLIC_ADDRESS_BTC_SUB;
 import static seedu.address.logic.parser.ParserUtil.MESSAGE_INVALID_INDEX;
 import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalIndexes.INDEX_FIRST_PERSON;
@@ -17,7 +19,6 @@ import org.junit.jupiter.api.Test;
 
 import seedu.address.logic.parser.exceptions.ParseException;
 import seedu.address.model.addresses.BtcAddress;
-import seedu.address.model.addresses.Network;
 import seedu.address.model.addresses.PublicAddress;
 import seedu.address.model.addresses.PublicAddressesComposition;
 import seedu.address.model.person.Address;
@@ -33,7 +34,7 @@ public class ParserUtilTest {
     private static final String INVALID_EMAIL = "example.com";
     private static final String INVALID_TAG = "#friend";
     private static final String INVALID_NETWORK = "invalid";
-    private static final String INVALID_LABEL = " ";
+    private static final String INVALID_LABEL_1 = " ";
     private static final String INVALID_BTC_ADDRESS = " ";
 
     private static final String VALID_NAME = "Rachel Walker";
@@ -43,7 +44,8 @@ public class ParserUtilTest {
     private static final String VALID_TAG_1 = "friend";
     private static final String VALID_TAG_2 = "neighbour";
     private static final String VALID_NETWORK = "BTC";
-    private static final String VALID_LABEL = "My BTC Wallet";
+    private static final String VALID_LABEL_1 = "Main";
+    private static final String VALID_LABEL_2 = "Sub";
     private static final String VALID_PUBLIC_ADDRESS_STRING_BTC_1 = "bc1qa96vpa8ypgpkvzqw3xu9n4re5vhamg89v0q92j";
     private static final String VALID_PUBLIC_ADDRESS_STRING_BTC_2 = "bc1qnmd6uvx49w57cqe7du5pg3htyah9xmxep7gc46";
 
@@ -210,7 +212,7 @@ public class ParserUtilTest {
     @Test
     public void parsePublicAddress_nullPublicAddress_throwsNullPointerException() {
         assertThrows(NullPointerException.class, () ->
-            ParserUtil.parsePublicAddress(null, VALID_LABEL, VALID_NETWORK));
+            ParserUtil.parsePublicAddress(null, VALID_LABEL_1, VALID_NETWORK));
     }
 
     @Test
@@ -222,33 +224,34 @@ public class ParserUtilTest {
     @Test
     public void parsePublicAddress_invalidPublicAddress_throwsParseException() {
         assertThrows(ParseException.class, () ->
-            ParserUtil.parsePublicAddress(INVALID_BTC_ADDRESS, VALID_LABEL, VALID_NETWORK));
+            ParserUtil.parsePublicAddress(INVALID_BTC_ADDRESS, VALID_LABEL_1, VALID_NETWORK));
     }
 
     @Test
     public void parsePublicAddress_invalidLabel_throwsParseException() {
         assertThrows(ParseException.class, () ->
-            ParserUtil.parsePublicAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, INVALID_LABEL, VALID_NETWORK));
+            ParserUtil.parsePublicAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, INVALID_LABEL_1, VALID_NETWORK));
+
     }
 
     @Test
     public void parsePublicAddress_invalidNetwork_throwsParseException() {
         assertThrows(ParseException.class, () ->
-            ParserUtil.parsePublicAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, VALID_LABEL, INVALID_NETWORK));
+            ParserUtil.parsePublicAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, VALID_LABEL_1, INVALID_NETWORK));
     }
 
     @Test
     public void parsePublicAddress_validInputs_returnsPublicAddress() throws Exception {
-        PublicAddress expectedAddress = new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, VALID_LABEL);
+        PublicAddress expectedAddress = new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, VALID_LABEL_1);
         assertEquals(expectedAddress, ParserUtil.parsePublicAddress(
-            VALID_PUBLIC_ADDRESS_STRING_BTC_1, VALID_LABEL, VALID_NETWORK));
+            VALID_PUBLIC_ADDRESS_STRING_BTC_1, VALID_LABEL_1, VALID_NETWORK));
     }
 
     @Test
     public void parsePublicAddress_validInputsWithWhitespace_returnsPublicAddress() throws Exception {
         String addressWithWhitespace = " " + VALID_PUBLIC_ADDRESS_STRING_BTC_1 + " ";
-        String labelWithWhitespace = " " + VALID_LABEL + " ";
-        PublicAddress expectedAddress = new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, VALID_LABEL);
+        String labelWithWhitespace = " " + VALID_LABEL_1 + " ";
+        PublicAddress expectedAddress = new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, VALID_LABEL_1);
         assertEquals(expectedAddress,
             ParserUtil.parsePublicAddress(addressWithWhitespace, labelWithWhitespace, VALID_NETWORK));
     }
@@ -277,34 +280,44 @@ public class ParserUtilTest {
 
     @Test
     public void parsePublicAddresses_validInputs_returnsMap() throws Exception {
-        Collection<String> inputs = Arrays.asList(
-            VALID_NETWORK + ">" + VALID_PUBLIC_ADDRESS_STRING_BTC_1,
-            VALID_NETWORK + ">" + VALID_PUBLIC_ADDRESS_STRING_BTC_2
+        Collection<String> inputs = List.of(
+            VALID_NETWORK + ">" + VALID_PUBLIC_ADDRESS_STRING_BTC_1
         );
 
         PublicAddressesComposition expected = new PublicAddressesComposition();
-        Set<PublicAddress> btcAddresses = new HashSet<>();
-        btcAddresses.add(new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, PublicAddress.DEFAULT_LABEL));
-        btcAddresses.add(new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_2, PublicAddress.DEFAULT_LABEL));
-        expected.addPublicAddressesToNetwork(Network.BTC, btcAddresses);
+        PublicAddressesComposition btcAddresses = new PublicAddressesComposition();
+        btcAddresses = btcAddresses.add(new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, PublicAddress.DEFAULT_LABEL));
+
+        expected = expected.combineWith(btcAddresses);
+
 
         assertEquals(expected, ParserUtil.parsePublicAddresses(inputs));
     }
 
     @Test
     public void parsePublicAddresses_validInputsWithWhitespace_returnsMap() throws Exception {
-        Collection<String> inputs = Arrays.asList(
-            " " + VALID_NETWORK + " > " + VALID_PUBLIC_ADDRESS_STRING_BTC_1 + " ",
-            " " + VALID_NETWORK + " > " + VALID_PUBLIC_ADDRESS_STRING_BTC_2 + " "
+
+
+        Collection<String> inputs = List.of(
+            " " + VALID_NETWORK + " > " + VALID_PUBLIC_ADDRESS_STRING_BTC_1 + " "
+
         );
 
         PublicAddressesComposition expected = new PublicAddressesComposition();
-        Set<PublicAddress> btcAddresses = new HashSet<>();
-        btcAddresses.add(new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, PublicAddress.DEFAULT_LABEL));
-        btcAddresses.add(new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_2, PublicAddress.DEFAULT_LABEL));
-        expected.addPublicAddressesToNetwork(Network.BTC, btcAddresses);
+        PublicAddressesComposition btcAddresses = new PublicAddressesComposition();
+        btcAddresses = btcAddresses.add(new BtcAddress(VALID_PUBLIC_ADDRESS_STRING_BTC_1, PublicAddress.DEFAULT_LABEL));
+        expected = expected.combineWith(btcAddresses);
+
 
         assertEquals(expected, ParserUtil.parsePublicAddresses(inputs));
+    }
+
+    @Test
+    public void parsePublicAddresses_invalidDuplicateLabels_throwsIllegalArgumentException() throws Exception {
+        Collection<String> inputs = List.of(VALID_NETWORK + ">" + VALID_PUBLIC_ADDRESS_BTC_MAIN,
+            VALID_NETWORK + ">" + VALID_PUBLIC_ADDRESS_BTC_SUB);
+
+        assertThrows(IllegalArgumentException.class, () -> ParserUtil.parsePublicAddresses(inputs));
     }
 
     @Test
@@ -314,7 +327,7 @@ public class ParserUtilTest {
 
     @Test
     public void parsePublicAddressLabel_invalidValue_throwsParseException() {
-        assertThrows(ParseException.class, () -> ParserUtil.parsePublicAddressLabel(INVALID_LABEL));
+        assertThrows(ParseException.class, () -> ParserUtil.parsePublicAddressLabel(INVALID_LABEL_1));
     }
 
 }
